Add initial paragraphs

--- a/Interim/interim.bib
+++ b/Interim/interim.bib
@@ -78,6 +78,22 @@
 	annote = {Comment: ISMIR 2021 camera ready},
 }
 
+@book{miranda_quantum_2022,
+	title = {Quantum {Computer} {Music}: {Foundations}, {Methods} and {Advanced} {Concepts}},
+	copyright = {https://www.springer.com/tdm},
+	isbn = {978-3-031-13908-6 978-3-031-13909-3},
+	shorttitle = {Quantum {Computer} {Music}},
+	url = {https://link.springer.com/10.1007/978-3-031-13909-3},
+	language = {en},
+	urldate = {2024-12-28},
+	publisher = {Springer International Publishing},
+	editor = {Miranda, Eduardo Reck},
+	year = {2022},
+	doi = {10.1007/978-3-031-13909-3},
+	keywords = {Artificial Intelligence and Music, Computer Music, Computer-aided Music Composition, IBM Quantum, Music Technology, Photonic Quantum Computing, Qiskit, Quantum AI, Quantum Artificial Intelligence, Quantum Arts, Quantum Computer, Quantum Computer Music, Quantum Computing, Quantum Computing and Creativity, Quantum Creativity, Quantum Music, Rigetti, Xanadu},
+}
+
+
 @inproceedings{terao_neural_2023,
 	title = {Neural {Band}-to-{Piano} {Score} {Arrangement} with {Stepless} {Difficulty} {Control}},
 	url = {https://ieeexplore.ieee.org/abstract/document/10095462?casa_token=8Hedd-Wd_ScAAAAA:pYVnW7EXHUaiTkWs-tRs7WX2G8xVuygmtQZSYJK087eUVoWy5KCEM7WYN_egZTn_ixtwxSr8Sog},
@@ -91,4 +107,39 @@
 	note = {ISSN: 2379-190X},
 	keywords = {Automatic piano arrangement, Controllability, deep learning, Deep learning, Neural networks, Performance gain, Runtime, score reduction, Signal processing, symbolic music processing, Training},
 	pages = {1--5},
+}
+
+
+@misc{oed_annealing_2024,
+	title = {annealing, n., sense 3},
+	url = {https://doi.org/10.1093/OED/1128035865},
+	publisher = {Oxford University Press},
+	author = {{Oxford English Dictionary}},
+	month = dec,
+	year = {2024},
+}
+
+
+@misc{musicxml,
+	title = {{MusicXML} for {Exchanging} {Digital} {Sheet} {Music}},
+	url = {https://www.musicxml.com/},
+	abstract = {MusicXML is the standard open format for exchanging digital sheet music. It allows you to collaborate with musicians using different music applications.},
+	language = {en-US},
+	urldate = {2024-12-28},
+	journal = {MusicXML},
+}
+
+
+@inproceedings{hoshi_versatile_2022,
+	title = {Versatile {Automatic} {Piano} {Reduction} {Generation} {System} by {Deep} {Learning}},
+	url = {https://ieeexplore.ieee.org/document/9754115},
+	doi = {10.1109/ICARC54489.2022.9754115},
+	abstract = {Piano reduction is a sheet music that is arranged for piano performance while retaining as much information as possible on a song composed of multiple parts, such as an orchestra. There have been several studies on automatic generation of piano reductions. However, they have had difficulties in dealing with a wide range of genres because they are generated according to predefined rules. Therefore, in this study, we propose a method for automatic generation of piano reduction with enhanced versatility using deep learning. In this system, a CNN-based supervised learning model is used to generate a piano-playable score from a song consisting of multiple parts. We also proposed an algorithm to discriminate the playability of a sheet on the piano and tried to improve the accuracy of the piano reduction. As a result of the evaluation of the generated piano reduction, it was found that the playability was improved.},
+	urldate = {2024-12-27},
+	booktitle = {2022 2nd {International} {Conference} on {Advanced} {Research} in {Computing} ({ICARC})},
+	author = {Hoshi, Yuki and Orihara, Ryohei and Sei, Yuichi and Tahara, Yasuyuki and Ohsuga, Akihiko},
+	month = feb,
+	year = {2022},
+	keywords = {Deep learning, Training, Instruments, CNN, Error analysis, Machine learning, MIDI, Music, Neural nets, Piano reduction, Supervised learning, Training data},
+	pages = {66--71},
 }
