Initial boundary detection and entropy calculations

--- a/Notebooks/MIS.ipynb
+++ b/Notebooks/MIS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,12 @@
     "import dimod\n",
     "import dwave.inspector\n",
     "\n",
-    "from graphs import defineGraph, plotGraph"
+    "from graphUtilities import defineGraph, plotGraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
